# budget-app

./: .gitignore  .gitmodules  CMakeLists.txt  IncomeBaseline.cpp  README.md  main.cpp
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/: IncomeBaselineForm.js
frontend/src/components/Dashboard/: AddExpenses.js  Dashboard.js  TransactionTable.js  backup.js
frontend/src/components/Dashboard/Expense/: Expense_Module.js
frontend/src/components/Dashboard/Transactions/: RecentTransactions.js  somecomponenet.js
frontend/src/components/TopBar/: ButtonAppBar.js
frontend/src/components/UserAccountSetup/: AccountBox.js  CategorySummary.js  Step2.js  Summary.js  UserAccountSetup.js
frontend/src/components/UserAccountSetup/Step1/: AccountBox.js  AccountSummary.js  Step1.js
frontend/src/components/UserAccountSetup/Step2/: CategoryBox.js  Step2.js
include/: Accounts_Manager.h  Category_Manager.h  IncomeBaseline.h  InitialAccountSetup.h  Transaction_Manager.h  accounts.h  database_module.h  json_helper.h  userinformation.h
src/: IncomeBaseline.cpp  main.cpp
src/accounts/: Accounts_Manager.cpp
src/categories/: Category_Manager.cpp
src/database/: database_module.cpp  schema_backup.sql
src/executable/: main.cpp
src/json/: json_helper.cpp
src/moneyflow/: InitialAccountSetup.cpp  Transaction_Manager.cpp
src/user/: userinformation.cpp
